# dxz

./: CMakeLists.txt  dxz.txt  usage.txt
build_after_recovery/: CMakeCache.txt  Makefile  cmake_install.cmake  main  test  zdd.dot
build_gl/: CMakeCache.txt  Makefile  cmake_install.cmake  main  test
build_nocache/: CMakeCache.txt  Makefile  cmake_install.cmake  main  test
build_test_cache/: CMakeCache.txt  Makefile  cmake_install.cmake  main  test
dataset_new/: Funet.txt  Interoute.txt  Ion.txt  Missouri.txt  UsCarrier.txt  UsSignal.txt  VisionNet.txt  att48.txt  burma14.txt  grafo117.20.txt  grafo121.20.txt  grafo190.20.txt  grafo215.20.txt  grafo244.20.txt  grafo251.20.txt  grafo7785.100.txt  grafo8224.100.txt  grafo8564.100.txt  grid33.txt  ulysses16.txt
full_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main  test
include/: DancingLinks.h
set_partitioning_benchmarks/: delta.txt  exotic_fives.txt  heart.txt  meteor.txt  sppnw07.txt  sppnw08.txt  sppnw09.txt  sppnw10.txt  sppnw12.txt  sppnw15.txt  sppnw19.txt  sppnw20.txt  sppnw21.txt  sppnw22.txt
src/: DLXZ.cpp  DLX_with_ZDD.cpp  main.cpp
test/: test.cpp
